tests/ui/conditional-compilation/cfg-in-crate-1.rs
#![cfg(FALSE)] //~ ERROR `main` function not found in crate `cfg_in_crate_1`
